EXTRA_DIST =						\
	mingw-cross/mingw-cross.sh			\
	MSVS2005/Gnokii_setup/Gnokii_setup.vdproj	\
	MSVS2005/gnokii.sln				\
	MSVS2005/config.h				\
	MSVS2005/gnokii.vcproj				\
	MSVS2005/gnokiirc				\
	MSVS2005/libgnokii.vcproj			\
	MSVS2008/Gnokii_setup/Gnokii_setup.vdproj	\
	MSVS2008/gnokii.sln				\
	MSVS2008/config.h				\
	MSVS2008/gnokii.vcproj				\
	MSVS2008/gnokiirc				\
	MSVS2008/libgnokii.vcproj			\
	MSVC6/config.h					\
	MSVC6/gnokii.dsp				\
	MSVC6/libgnokii.dsp				\
	MSVC6/gnokii.dsw				\
	MSVC8/gnokii.sln				\
	MSVC8/config.h					\
	MSVC8/gnokii.vcproj				\
	MSVC8/libgnokii.vcproj

