
EXTRA_HEADERS = \
		atbosch.h \
		ateric.h \
		atgen.h \
		athuawei.h \
		atlg.h \
		atmot.h \
		atnok.h \
		atsag.h \
		atsam.h \
		atsie.h \
		atsoer.h \
		dc2711.h \
		generic.h \
		gnapplet.h \
		nk2110.h \
		nk3110.h \
		nk6100.h \
		nk6510.h \
		nk7110.h \
		nokia.h \
		pcsc.h

EXTRA_DIST = $(EXTRA_HEADERS)
