EXTRA_DIST =						\
	help/pl_PL/contacts.html			\
	help/pl_PL/xkeyb.html				\
	help/pl_PL/netmon/gsm/firmware.htm		\
	help/pl_PL/netmon/gsm/nm_9110.png		\
	help/pl_PL/netmon/gsm/net_spis.htm		\
	help/pl_PL/netmon/gsm/net_mon1.png		\
	help/pl_PL/netmon/gsm/faq_net5.htm		\
	help/pl_PL/netmon/gsm/nm_5110.png		\
	help/pl_PL/netmon/gsm/nm_3210.png		\
	help/pl_PL/netmon/gsm/faq_net4.htm		\
	help/pl_PL/netmon/gsm/nm2_5110.png		\
	help/pl_PL/netmon/gsm/net_mon3.png		\
	help/pl_PL/netmon/gsm/faqkable.htm		\
	help/pl_PL/netmon/gsm/tip.png			\
	help/pl_PL/netmon/gsm/f2mbus2.png		\
	help/pl_PL/netmon/gsm/f2mbus.png		\
	help/pl_PL/netmon/gsm/faq_net2.htm		\
	help/pl_PL/netmon/gsm/faq_net1.htm		\
	help/pl_PL/netmon/gsm/faq_net3.htm		\
	help/pl_PL/netmon/gsm/index.htm			\
	help/pl_PL/netmon/gsm/faq_net6.htm		\
	help/pl_PL/netmon/gsm/faq_net0.htm		\
	help/pl_PL/netmon/gsm/faq_loga.htm		\
	help/pl_PL/netmon/gsm/net_mon2.png		\
	help/pl_PL/netmon/glowna.htm			\
	help/pl_PL/netmon/spis_g.htm			\
	help/pl_PL/netmon/spis_d2.htm			\
	help/pl_PL/netmon/spis_d.htm			\
	help/pl_PL/netmon/htm.png			\
	help/pl_PL/netmon/dir1.png			\
	help/pl_PL/netmon/styl.css			\
	help/pl_PL/netmon/index.htm			\
	help/pl_PL/netmon/dir0.png			\
	help/pl_PL/netmon/spis.htm			\
	help/pl_PL/netmon/konw.js			\
	help/pl_PL/sms.html				\
	help/pl_PL/speeddial.html			\
	help/pl_PL/netmon.html				\
	help/pl_PL/index.html				\
	help/pl_PL/dtmf.html				\
	help/pl_PL/calendar.html			\
	help/en_US/firmware/firmware.html		\
	help/en_US/netmon/nm_9110.png			\
	help/en_US/netmon/faq_net0.html			\
	help/en_US/netmon/net_mon1.png			\
	help/en_US/netmon/nm_5110.png			\
	help/en_US/netmon/faq_net3.html			\
	help/en_US/netmon/nm_3210.png			\
	help/en_US/netmon/nm2_5110.png			\
	help/en_US/netmon/net_mon3.png			\
	help/en_US/netmon/tip.png			\
	help/en_US/netmon/faq_net4.html			\
	help/en_US/netmon/faq_net6.html			\
	help/en_US/netmon/faq_net2.html			\
	help/en_US/netmon/faq_net5.html			\
	help/en_US/netmon/faq_net1.html			\
	help/en_US/netmon/net_mon2.png			\
	help/en_US/faq.html				\
	help/en_US/styl.css				\
	help/en_US/index.html

