EXTRA_DIST =				\
	alarm.xpm			\
	background.xpm			\
	BCard.xpm			\
	Black_point.xpm			\
	Caller_logo.xpm			\
	Caller.xpm			\
	Check.xpm			\
	Delete.xpm			\
	Dial.xpm			\
	Display.xpm			\
	Duplicate.xpm			\
	Edit_flip_horizontal.xpm	\
	Edit_flip_vertical.xpm		\
	Edit_invert.xpm			\
	Edit.xpm			\
	Flip.xpm			\
	Forward.xpm			\
	Green_pixel.xpm			\
	Green_point.xpm			\
	info.xpm			\
	Invert.xpm			\
	logo.xpm			\
	Names.xpm			\
	NewBD.xpm			\
	NewCall.xpm			\
	NewMeet.xpm			\
	NewRem.xpm			\
	New.xpm				\
	Open.xpm			\
	Operator_logo.xpm		\
	Op.xpm				\
	phone.xpm			\
	Play.xpm			\
	Preview_default.xpm		\
	quest.xpm			\
	Read.xpm			\
	Reply.xpm			\
	Save.xpm			\
	SendSMS.xpm			\
	Send.xpm			\
	sim.xpm				\
	sms.xpm				\
	Startup_logo.xpm		\
	Startup.xpm			\
	stop.xpm			\
	Tool_brush.xpm			\
	Tool_filled_rectangle.xpm	\
	Tool_line.xpm			\
	Tool_rectangle.xpm


