en_US_netmondir = $(datadir)/xgnokii/help/en_US/netmon/

en_US_netmon_DATA =				\
	nm_9110.png			\
	faq_net0.html			\
	net_mon1.png			\
	nm_5110.png			\
	faq_net3.html			\
	nm_3210.png			\
	nm2_5110.png			\
	net_mon3.png			\
	tip.png			\
	faq_net4.html			\
	faq_net6.html			\
	faq_net2.html			\
	faq_net5.html			\
	faq_net1.html			\
	net_mon2.png

EXTRA_DIST = \
	nm_9110.png			\
	faq_net0.html			\
	net_mon1.png			\
	nm_5110.png			\
	faq_net3.html			\
	nm_3210.png			\
	nm2_5110.png			\
	net_mon3.png			\
	tip.png			\
	faq_net4.html			\
	faq_net6.html			\
	faq_net2.html			\
	faq_net5.html			\
	faq_net1.html			\
	net_mon2.png
