SUBDIRS = gsm
pl_PL_netmondir = $(datadir)/xgnokii/help/pl_PL/netmon
pl_PL_netmon_DATA =			\
	glowna.htm			\
	spis_g.htm			\
	spis_d2.htm			\
	spis_d.htm			\
	htm.png				\
	dir1.png			\
	styl.css			\
	index.htm			\
	dir0.png			\
	spis.htm			\
	konw.js

EXTRA_DIST = \
	glowna.htm			\
	spis_g.htm			\
	spis_d2.htm			\
	spis_d.htm			\
	htm.png				\
	dir1.png			\
	styl.css			\
	index.htm			\
	dir0.png			\
	spis.htm			\
	konw.js
