pl_PL_netmon_gsmdir = $(datadir)/xgnokii/help/pl_PL/netmon/gsm
pl_PL_netmon_gsm_DATA =		\
	firmware.htm		\
	nm_9110.png		\
	net_spis.htm		\
	net_mon1.png		\
	faq_net5.htm		\
	nm_5110.png		\
	nm_3210.png		\
	faq_net4.htm		\
	nm2_5110.png		\
	net_mon3.png		\
	faqkable.htm		\
	tip.png			\
	f2mbus2.png		\
	f2mbus.png		\
	faq_net2.htm		\
	faq_net1.htm		\
	faq_net3.htm		\
	index.htm		\
	faq_net6.htm		\
	faq_net0.htm		\
	faq_loga.htm		\
	net_mon2.png

